--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -25,7 +25,13 @@
         android:layout_height="fill_parent"
         android:orientation="vertical" >
         
-        
+        <TextView
+            android:id="@+id/outputTextView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:text="@string/openingOutput" >
+            
+            </TextView>
     </LinearLayout>
 
 </LinearLayout>
