--- a/res/layout-normal/main.xml
+++ b/res/layout-normal/main.xml
@@ -8,7 +8,7 @@
         android:id="@+id/commandInput"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/commandPrompt" >
+        android:hint="@string/commandPrompt" >
 
         <requestFocus />
     </EditText>
@@ -25,6 +25,12 @@
         android:layout_height="fill_parent"
         android:orientation="vertical" >
         
+        <TextView 
+            android:id="@+id/outputPanel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/openingOutput" >
+            </TextView>     
         
     </LinearLayout>
 
