--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,7 +8,7 @@
         android:id="@+id/commandInput"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/commandPrompt" >
+        android:hint="" >
 
         <requestFocus />
     </EditText>
